--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <li>The family is the natural and fundamental group unit of society and is
       entitled to protection by society and the State.</li>
   </ol>
-  <h2><a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf" , class="toDocument">Articles 17 to 30
+  <h2><a href="https://www.ohchr.org/EN/UDHR/Documents/UDHR_Translations/eng.pdf" , class="to-document">Articles 17 to 30
   </h2>
 </body>
 
